fixes of buttons on mobile, responsive

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -64,3 +64,11 @@
     font-size: 1.5rem;
   }
 }
+
+@media (max-width: 768px) {
+  .carousel {
+    &__nav {
+      display: none;
+    }
+  }
+}
